@@ -249,6 +249,7 @@ tiberium-blue-saturation-point=Blue Tiberium Saturation Percent
 tiberium-blue-saturation-slowdown=Blue Tiberium Post-Saturation Growth Rate
 tiberium-starting-area=Tiberium in Starting Area
 tiberium-wont-damage-biters=Biters Immune to Tiberium Damage
+tiberium-pollution-multiplier=Tiberium Pollution Multiplier
 tiberium-easy-recipes=Easy Mode
 tiberium-byproduct-1=Refining Sludge Waste
 tiberium-byproduct-2=Refining Sulfur Waste
@@ -279,7 +280,8 @@ tiberium-debug-text=Activates useful and annoying debugging messages both in-gam
 tiberium-centrifuge-override=Advanced setting: replace the automatically generated __1__ recipe output with something you feel is more appropriate for your mod combination.\nEnter a delimited string of the items/fluids and amounts that should come from the recipe in the exact format "item1-internal-name:item1-amount,item2-internal-name:item2-amount" e.g. iron-ore:13,crude-oil:32\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to use the automatically generated __1__ Centrifuging recipe output
 tiberium-resource-exclusions=Advanced setting: list resources that should never be given by tiberium centrifuging or transmutation recipes.\nEnter a delimited string of the items/fluids in the exact format "item1-internal-name,item2-internal-name" e.g. uranium-ore,crude-oil\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to allow centrifuging and transmuting all resources
 tiberium-value=Scales how much raw material you get from a single piece of Tiberium ore. Higher values make the game easier.\nDefault: 10
-tiberium-wont-damage-biters=Prevents biters from dying to Tiberium fields.  Does not affect damage dealt with Tiberium weapons.\nDefault: enabled
+tiberium-wont-damage-biters=Prevents biters from dying to Tiberium fields. Does not affect damage dealt with Tiberium weapons.\nDefault: enabled
+tiberium-pollution-multiplier=Scales how much extra pollution Tiberium refining and burning produces. Set to 1 to have Tiberium refining not produce more pollution than normal recipes.\nDefault:4
 tiberium-spread=Controls how rapidly Tiberium spreads.  Higher values will aggressively cover the landscape. Zero will give regenerating fields that don't expand infinitely.\nDefault: 30
 tiberium-starting-area=This will include Tiberium as one of your starting ore patches.\nYes, it will spread and eat the other starting ore patches.\nYes, that will make the game significantly more difficult.\nYou can expect no mercy and only pain, you've been warned.\nDefault: disabled
 tiberium-tier-zero=This setting adds an additional tier of centrifuging that you can access before unlocking fluid recipes or electricity. Useful for Tiberium only playthroughs with other mods that extend the early game.\nDefault: disabled
