@@ -20,7 +20,7 @@ data:extend{
 		max_temperature = 1000,
 		order = "a[fluid]-c[crude-oil]",
 		fuel_value = "12.5MJ",
-		emissions_multiplier = 3,
+		emissions_multiplier = common.scalePollution(3),
 		pressure_to_speed_ratio = 0.4,
 	},
 	{
